// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataFilters clear 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c15 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c18 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c18:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c18:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c18:focus >circle,
.c18:focus >ellipse,
.c18:focus >line,
.c18:focus >path,
.c18:focus >polygon,
.c18:focus >polyline,
.c18:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c18:focus ::-moz-focus-inner {
  border: 0;
}

.c18:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c18:focus:not(:focus-visible) >circle,
.c18:focus:not(:focus-visible) >ellipse,
.c18:focus:not(:focus-visible) >line,
.c18:focus:not(:focus-visible) >path,
.c18:focus:not(:focus-visible) >polygon,
.c18:focus:not(:focus-visible) >polyline,
.c18:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c18:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c14 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled])+div,
.c9:hover input:not([disabled])+span {
  border-color: #000000;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c11 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c7 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        checked=""
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      >
                        <svg
                          class="c14"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6,11.3 L10.3,16 L18,6.2"
                            fill="none"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c15"
                  />
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c16 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c17"
        >
          <button
            class="c18"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters drop 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters"
        class="c3"
        id="test-data--filters-control"
        type="button"
      >
        <svg
          aria-label="Filter"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m3 6 7 7v8h4v-8l7-7V3H3z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataFilters drop 2`] = `
<button
  aria-label="Open filters"
  class="StyledButton-sc-323bzc-0 bIZBkf"
  data-g-tabindex="none"
  id="test-data--filters-control"
  tabindex="-1"
  type="button"
>
  <svg
    aria-label="Filter"
    class="StyledIcon-sc-ofa7kd-0 esCCqY"
    viewBox="0 0 24 24"
  >
    <path
      d="m3 6 7 7v8h4v-8l7-7V3H3z"
      fill="none"
      stroke="#000"
      stroke-width="2"
    />
  </svg>
</button>
`;

exports[`DataFilters drop 3`] = `
"@media only screen and (max-width: 768px) {
  .eEJtXY {
    margin-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .hEaUqP {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .hEaUqP {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .jDgzUY {
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .ldnIiP {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}
@media only screen and (max-width: 768px) {
  .coNAXt {
    margin-top: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .hrJqFx {
    height: 6px;
  }
}"
`;

exports[`DataFilters drop badge 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFF;
  font-weight: normal;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c10:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters, 1 filter applied"
        class="c3"
        id="data--filters-control"
        type="button"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <svg
              aria-label="Filter"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="m3 6 7 7v8h4v-8l7-7V3H3z"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="c7"
            style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
          >
            <div
              class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
              style="min-height: 24px; min-width: 24px;"
            >
              <span
                class="c9"
              >
                1
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        class="c1"
      >
        <button
          class="c10"
          type="button"
        >
          Clear filters
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters"
        class="c3"
        id="test-data--filters-control"
        type="button"
      >
        <svg
          aria-label="Filter"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m3 6 7 7v8h4v-8l7-7V3H3z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 2`] = `
.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 384px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  overflow: auto;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c22 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c24 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
}

.c11 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c23 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c13 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c13 *[stroke*='#'],
.c13 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*='#'],
.c13 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c15 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) >circle,
.c12:focus:not(:focus-visible) >ellipse,
.c12:focus:not(:focus-visible) >line,
.c12:focus:not(:focus-visible) >path,
.c12:focus:not(:focus-visible) >polygon,
.c12:focus:not(:focus-visible) >polyline,
.c12:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c25 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c25:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c25:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c25:focus >circle,
.c25:focus >ellipse,
.c25:focus >line,
.c25:focus >path,
.c25:focus >polygon,
.c25:focus >polyline,
.c25:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c25:focus ::-moz-focus-inner {
  border: 0;
}

.c25:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c25:focus:not(:focus-visible) >circle,
.c25:focus:not(:focus-visible) >ellipse,
.c25:focus:not(:focus-visible) >line,
.c25:focus:not(:focus-visible) >path,
.c25:focus:not(:focus-visible) >polygon,
.c25:focus:not(:focus-visible) >polyline,
.c25:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c25:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  max-width: 100%;
  max-height: 100%;
}

.c18 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c18:hover input:not([disabled])+div,
.c18:hover input:not([disabled])+span {
  border-color: #000000;
}

.c21 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c21:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c20 {
  flex-shrink: 0;
}

.c10 {
  margin: 0px;
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(0, 0, 0, 0.5);
  color: #f8f8f8;
  pointer-events: all;
  will-change: transform;
}

.c2 {
  display: flex;
  flex-direction: column;
  min-height: 48px;
  background-color: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: absolute;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 0;
  top: 0px;
  bottom: 0px;
  right: 0px;
  transform: translateX(0);
  animation: bKtuJK 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
  clip-path: inset(50%);
  white-space: nowrap;
  border: 0;
}

.c3:focus {
  outline: none;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c7 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c22 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c24 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c24 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c24 {
    padding-bottom: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    width: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c23 {
    height: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media only screen and (max-width: 768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

@media only screen and (max-width: 768px) {
  .c0 {
    position: fixed;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="test-data--filters-layer"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    data-g-portal-id="0"
    id="test-data--filters-layer"
  >
    <span
      class="c3"
      tabindex="-1"
    />
    <div
      class="c4"
    >
      <form
        class="c5"
        fill="vertical"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <header
                class="c9"
              >
                <h2
                  class="c10"
                >
                  Filters
                </h2>
                <div
                  class="c11"
                />
                <button
                  class="c12"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="c13"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m3 3 18 18M3 21 21 3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </header>
              <div
                class="c14 "
              >
                <label
                  class="c15"
                  for="test-data-name"
                  id="grommet-test-data-name__label"
                >
                  name
                </label>
                <div
                  class="c16 "
                >
                  <div
                    aria-labelledby="grommet-test-data-name__label"
                    class="c17 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="test-data-name"
                    role="group"
                  >
                    <label
                      class="c18"
                    >
                      <div
                        class="c19 c20"
                      >
                        <input
                          class="c21"
                          type="checkbox"
                        />
                        <div
                          class="c22 "
                        />
                      </div>
                      <span>
                        a
                      </span>
                    </label>
                    <div
                      class="c23"
                    />
                    <label
                      class="c18"
                    >
                      <div
                        class="c19 c20"
                      >
                        <input
                          class="c21"
                          type="checkbox"
                        />
                        <div
                          class="c22 "
                        />
                      </div>
                      <span>
                        b
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="c24"
          >
            <button
              class="c25"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 3`] = `
"@media only screen and (max-width: 768px) {
  .eEJtXY {
    margin-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .hEaUqP {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .hEaUqP {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .jDgzUY {
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .ldnIiP {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}
@media only screen and (max-width: 768px) {
  .coNAXt {
    margin-top: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .hrJqFx {
    height: 6px;
  }
}"
`;

exports[`DataFilters properties array 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c16 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c16:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus >circle,
.c16:focus >ellipse,
.c16:focus >line,
.c16:focus >path,
.c16:focus >polygon,
.c16:focus >polyline,
.c16:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus ::-moz-focus-inner {
  border: 0;
}

.c16:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) >circle,
.c16:focus:not(:focus-visible) >ellipse,
.c16:focus:not(:focus-visible) >line,
.c16:focus:not(:focus-visible) >path,
.c16:focus:not(:focus-visible) >polygon,
.c16:focus:not(:focus-visible) >polyline,
.c16:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled])+div,
.c9:hover input:not([disabled])+span {
  border-color: #000000;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c11 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c7 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c14"
                  />
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c15"
        >
          <button
            class="c16"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters properties object 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c16 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c16:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus >circle,
.c16:focus >ellipse,
.c16:focus >line,
.c16:focus >path,
.c16:focus >polygon,
.c16:focus >polyline,
.c16:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus ::-moz-focus-inner {
  border: 0;
}

.c16:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) >circle,
.c16:focus:not(:focus-visible) >ellipse,
.c16:focus:not(:focus-visible) >line,
.c16:focus:not(:focus-visible) >path,
.c16:focus:not(:focus-visible) >polygon,
.c16:focus:not(:focus-visible) >polyline,
.c16:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled])+div,
.c9:hover input:not([disabled])+span {
  border-color: #000000;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c11 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c7 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c14"
                  />
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c15"
        >
          <button
            class="c16"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c16 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c16:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus >circle,
.c16:focus >ellipse,
.c16:focus >line,
.c16:focus >path,
.c16:focus >polygon,
.c16:focus >polyline,
.c16:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus ::-moz-focus-inner {
  border: 0;
}

.c16:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) >circle,
.c16:focus:not(:focus-visible) >ellipse,
.c16:focus:not(:focus-visible) >line,
.c16:focus:not(:focus-visible) >path,
.c16:focus:not(:focus-visible) >polygon,
.c16:focus:not(:focus-visible) >polyline,
.c16:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled])+div,
.c9:hover input:not([disabled])+span {
  border-color: #000000;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c11 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c7 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c14"
                  />
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c15"
        >
          <button
            class="c16"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters should display all filter options regardless of result set 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c16 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c16:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus >circle,
.c16:focus >ellipse,
.c16:focus >line,
.c16:focus >path,
.c16:focus >polygon,
.c16:focus >polyline,
.c16:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c16:focus ::-moz-focus-inner {
  border: 0;
}

.c16:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) >circle,
.c16:focus:not(:focus-visible) >ellipse,
.c16:focus:not(:focus-visible) >line,
.c16:focus:not(:focus-visible) >path,
.c16:focus:not(:focus-visible) >polygon,
.c16:focus:not(:focus-visible) >polyline,
.c16:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled])+div,
.c9:hover input:not([disabled])+span {
  border-color: #000000;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c11 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c17 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <form
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c1"
            >
              <div
                class="c5 "
              >
                <label
                  class="c6"
                  for="data-name"
                  id="grommet-data-name__label"
                >
                  name
                </label>
                <div
                  class="c7 "
                >
                  <div
                    aria-labelledby="grommet-data-name__label"
                    class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="data-name"
                    role="group"
                  >
                    <label
                      class="c9"
                    >
                      <div
                        class="c10 c11"
                      >
                        <input
                          class="c12"
                          type="checkbox"
                        />
                        <div
                          class="c13 "
                        />
                      </div>
                      <span>
                        a
                      </span>
                    </label>
                    <div
                      class="c14"
                    />
                    <label
                      class="c9"
                    >
                      <div
                        class="c10 c11"
                      >
                        <input
                          class="c12"
                          type="checkbox"
                        />
                        <div
                          class="c13 "
                        />
                      </div>
                      <span>
                        b
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="c5 "
              >
                <label
                  class="c6"
                  for="data-color"
                  id="grommet-data-color__label"
                >
                  color
                </label>
                <div
                  class="c7 "
                >
                  <div
                    aria-labelledby="grommet-data-color__label"
                    class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="data-color"
                    role="group"
                  >
                    <label
                      class="c9"
                    >
                      <div
                        class="c10 c11"
                      >
                        <input
                          class="c12"
                          type="checkbox"
                        />
                        <div
                          class="c13 "
                        />
                      </div>
                      <span>
                        blue
                      </span>
                    </label>
                    <div
                      class="c14"
                    />
                    <label
                      class="c9"
                    >
                      <div
                        class="c10 c11"
                      >
                        <input
                          class="c12"
                          type="checkbox"
                        />
                        <div
                          class="c13 "
                        />
                      </div>
                      <span>
                        red
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="c15"
          >
            <button
              class="c16"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
      <ul
        class="c17"
        role="list"
      >
        <li
          class="c18 "
        >
          a
        </li>
        <li
          class="c19 "
        >
          b
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilters should not badge when RangeSelector returns to min/max 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters"
          class="c3"
          id="data--filters-control"
          type="button"
        >
          <svg
            aria-label="Filter"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="m3 6 7 7v8h4v-8l7-7V3H3z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilters sub objects 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c22 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c24 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c25 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c26 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(125, 76, 219, 0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c28 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c33 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c15 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c18 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c27 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c34 {
  font-size: 18px;
  line-height: 24px;
}

.c38 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c29 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c29:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c29:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c29:focus >circle,
.c29:focus >ellipse,
.c29:focus >line,
.c29:focus >path,
.c29:focus >polygon,
.c29:focus >polyline,
.c29:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c29:focus ::-moz-focus-inner {
  border: 0;
}

.c29:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c29:focus:not(:focus-visible) >circle,
.c29:focus:not(:focus-visible) >ellipse,
.c29:focus:not(:focus-visible) >line,
.c29:focus:not(:focus-visible) >path,
.c29:focus:not(:focus-visible) >polygon,
.c29:focus:not(:focus-visible) >polyline,
.c29:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c29:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c14 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled])+div,
.c9:hover input:not([disabled])+span {
  border-color: #000000;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c11 {
  flex-shrink: 0;
}

.c23 {
  position: absolute;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
}

.c20 {
  user-select: none;
}

.c32 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c37 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c30 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c31 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
}

.c36:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c36:focus >circle,
.c36:focus >ellipse,
.c36:focus >line,
.c36:focus >path,
.c36:focus >polygon,
.c36:focus >polyline,
.c36:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c36:focus ::-moz-focus-inner {
  border: 0;
}

.c36:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c36:focus:not(:focus-visible) >circle,
.c36:focus:not(:focus-visible) >ellipse,
.c36:focus:not(:focus-visible) >line,
.c36:focus:not(:focus-visible) >path,
.c36:focus:not(:focus-visible) >polygon,
.c36:focus:not(:focus-visible) >polyline,
.c36:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c36:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c35:focus {
  outline: 2px solid #6FFFB0;
}

.c35:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c21 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c26 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c28 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-location.city"
                id="grommet-data-location.city__label"
              >
                City
              </label>
              <div
                class="c7 "
              >
                <div
                  aria-labelledby="grommet-data-location.city__label"
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-location.city"
                  role="group"
                >
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        checked=""
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c13 "
                      >
                        <svg
                          class="c14"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6,11.3 L10.3,16 L18,6.2"
                            fill="none"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      Paris
                    </span>
                  </label>
                  <div
                    class="c15"
                  />
                  <label
                    class="c9"
                  >
                    <div
                      class="c10 c11"
                    >
                      <input
                        class="c12"
                        type="checkbox"
                      />
                      <div
                        class="c16 "
                      />
                    </div>
                    <span>
                      Sydney
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-location.lat"
                id="grommet-data-location.lat__label"
              >
                Latitude
              </label>
              <div
                class="c7 "
              >
                <div
                  class="c17"
                  id="data-location.lat"
                >
                  <span
                    class="c18"
                    style="width: 0px;"
                  >
                    10
                  </span>
                  <div
                    class="c19 c20"
                    tabindex="-1"
                  >
                    <div
                      class="c21"
                      style="flex: 100 0 0px;"
                    />
                    <div
                      class="c22"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Lower Bounds"
                        aria-valuemax="90"
                        aria-valuemin="-90"
                        aria-valuenow="10"
                        class="c23"
                        max="90"
                        min="-90"
                        readonly=""
                        step="9"
                        type="range"
                        value="10"
                      />
                      <div
                        class="c24"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c25 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c26"
                      style="flex: 81 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c22"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Upper Bounds"
                        aria-valuemax="90"
                        aria-valuemin="-90"
                        aria-valuenow="90"
                        class="c23"
                        max="90"
                        min="-90"
                        readonly=""
                        step="9"
                        type="range"
                        value="90"
                      />
                      <div
                        class="c24"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c25 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c21"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="c27"
                    style="width: 0px;"
                  >
                    90
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c28"
        >
          <button
            class="c29"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
    <table
      class="c30 c31"
    >
      <thead
        class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
        >
          <th
            class="c32 "
            id="grommet-data-table-header-location.city"
            scope="col"
          >
            <div
              class="c33"
            >
              <div
                class="c8 Header__StyledContentBox-sc-1baku5q-1"
              >
                <span
                  class="c34"
                >
                  City
                </span>
              </div>
            </div>
          </th>
          <th
            class="c32 "
            id="grommet-data-table-header-location.lat"
            scope="col"
          >
            <div
              class="c33"
            >
              <div
                class="c8 Header__StyledContentBox-sc-1baku5q-1"
              >
                <span
                  class="c34"
                >
                  Latitude
                </span>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="StyledTable__StyledTableBody-sc-1m3u5g-3 c35"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 c36"
        >
          <th
            class="c37 "
            scope="row"
          >
            <div
              class="c8"
            >
              <span
                class="c38"
              >
                Paris
              </span>
            </div>
          </th>
          <td
            class="c37 "
          >
            <div
              class="c8"
            >
              <span
                class="c34"
              >
                48
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataFilters sub objects with rangeSelector 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFF;
  font-weight: normal;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c10:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters, 1 filter applied"
          class="c3"
          id="data--filters-control"
          type="button"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <svg
                aria-label="Filter"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="m3 6 7 7v8h4v-8l7-7V3H3z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="c7"
              style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
            >
              <div
                class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
                style="min-height: 24px; min-width: 24px;"
              >
                <span
                  class="c9"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c1"
        >
          <button
            class="c10"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
